Slide Game added

--- a/public/src/mainLobby.less
+++ b/public/src/mainLobby.less
@@ -16,7 +16,8 @@
     margin-bottom: 50px;
     margin-top: 50px;
   }
-  h2{
+
+  h2 {
     color: white;
     font-family: "kidGames";
     text-shadow: 3px 3px 3px #000000;
@@ -48,6 +49,7 @@
   align-items: center;
   width: 250px;
   margin: 20px;
+
   h4 {
     color: @cookieLobbyFont;
     text-shadow: 2px 2px 2px #000000;
@@ -56,6 +58,7 @@
     font-size: 1.25em;
     text-align: center;
   }
+
   span {
     color: darkred;
     text-shadow: 2px 2px 2px #000000;
@@ -70,7 +73,7 @@
     flex-direction: column;
     align-items: center;
 
-    h2{
+    h2 {
       color: @cookieLobbyFont;
       text-shadow: 2px 2px 2px #000000;
       font-family: "kidGames";
@@ -78,7 +81,7 @@
       font-size: 1.5em;
       text-align: center;
     }
-    
+
   }
 }
 
@@ -108,14 +111,17 @@
   max-width: 910px;
   height: 400px;
   background-image: linear-gradient(@cookiebg, @cookieLobbyBorders, @cookiebg);
-  h4{
+
+  h4 {
     color: yellow;
     text-shadow: 2px 2px black;
   }
-  .avatar{
+
+  .avatar {
     font-size: 2em;
     text-align: center;
   }
+
   overflow-y: scroll;
   overflow-x: hidden;
 }
@@ -144,7 +150,8 @@
   margin: 20px;
   width: 410px;
   order: 1;
-  h3{
+
+  h3 {
     margin: 20px;
   }
 }
@@ -158,44 +165,57 @@
   background-image: url("../images/memoryGame.png");
 }
 
+.gameFour-mainLobby-container {
+  .cookieClicker-mainLobby-container;
+  background-image: url("../images/10.jpg");
+}
+
 @media only screen and (max-width: 750px) {
-  .mainLobby-container{
-    .test{
+  .mainLobby-container {
+    .test {
       font-size: 45px;
     }
   }
-  .mainLobby-players-container{
+
+  .mainLobby-players-container {
     font-size: 9px;
     height: 200px;
   }
+
   .main-lobby-player {
     width: 180px;
     display: flex;
     margin: 7px;
     padding: 7px;
-    h3{
+
+    h3 {
       margin: 7px;
     }
   }
-  .single-lobby-player{
+
+  .single-lobby-player {
     .main-lobby-player
   }
 
-  .cookieClicker-mainLobby-container{
+  .cookieClicker-mainLobby-container {
     height: 80px;
     width: 80px;
     border-radius: 1px;
-    .join-button{
+
+    .join-button {
       font-size: 10px;
     }
-    h2{
+
+    h2 {
       margin: 5px;
     }
   }
-  .gameThree-mainLobby-container{
+
+  .gameThree-mainLobby-container {
     .cookieClicker-mainLobby-container
   }
-  .gameTwo-mainLobby-container{
+
+  .gameTwo-mainLobby-container {
     .cookieClicker-mainLobby-container
   }
 }
