--- a/public/style/whackAMole.css
+++ b/public/style/whackAMole.css
@@ -21,7 +21,10 @@
 }
 @media screen and (max-width: 700px) {
   #whack-a-mole {
-    width: 390px;
-    height: 390px;
+    width: 380px;
+  }
+  .hole {
+    width: 90px;
+    height: 103px;
   }
 }
