production rules complete

--- a/public/src/mainLobby.less
+++ b/public/src/mainLobby.less
@@ -47,7 +47,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 250px;
+  width: 260px;
   margin: 20px;
 
   h4 {
@@ -81,7 +81,26 @@
       font-size: 1.5em;
       text-align: center;
     }
-
+    .veryHard{
+      color: red;
+      font-size: 20px;
+    }
+    .easy{
+      color: yellow;
+      font-size: 20px;
+    }
+    .medium{
+      color: orange;
+      font-size: 20px;
+    }
+    .hard{
+      color: darkred;
+      font-size: 20px;
+    }
+    .star{
+      color: @cookieLobbyFont;
+      font-size: 20px;
+    }
   }
 }
 
@@ -167,7 +186,7 @@
 
 .gameFour-mainLobby-container {
   .cookieClicker-mainLobby-container;
-  background-image: url("../images/10.jpg");
+  background-image: url("../images//slide\ puzzle\ pic.png");
 }
 
 @media only screen and (max-width: 750px) {
