--- a/public/src/style.less
+++ b/public/src/style.less
@@ -63,5 +63,20 @@ html {
     text-shadow: 4px 4px black;
     text-align: center;
     font-weight: normal;
+    color: white;
+  }
+}
+
+.winnerSingle{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  h1{
+    margin-bottom: 3em;
+  }
+  button{
+    width: 300px;
   }
 }
