--- a/public/src/style.less
+++ b/public/src/style.less
@@ -26,6 +26,8 @@ h1 {
 @import './profile.less';
 @import './chart.less';
 @import './memory.less';
+@import './chart.less';
+@import './chatRoom.less';
 
 body {
   // height: 100vh;
