--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1261,7 +1261,6 @@ body {
 }
 .chatRoom {
   background-color: #dbecfa;
-  max-width: 700px;
   max-height: 600px;
   line-height: 22px;
   padding: 20px;
@@ -1276,10 +1275,8 @@ body {
   display: flex;
   flex-direction: column;
   background-image: linear-gradient(#3D35A7, #7C72E0, #3D35A7);
-  max-width: 700px;
-  max-height: 800px;
   line-height: 22px;
-  padding: 2px;
+  padding: 20px;
   border-radius: 25px;
   position: relative;
   color: white;
@@ -1311,16 +1308,16 @@ body {
   align-items: flex-end;
 }
 .message-sent .text {
-  background-color: #4b08c9;
+  background-color: #574FC2;
   padding: 10px 20px;
   border-radius: 8px 0px 8px 8px;
 }
 form span {
   font-size: 24px;
-  color: #0386b1;
+  color: #8eb5f4;
 }
 input {
-  width: 500px;
+  width: 800px;
   height: 44px;
   outline: none;
   font-size: 18px;
