added CSS to header and changed title icon

--- a/public/src/mainLobby.less
+++ b/public/src/mainLobby.less
@@ -1,5 +1,25 @@
 @import './colors.less';
 
+.breaker{
+  font-family: 'kidGames';
+  font-size: 1em;
+  text-shadow: 3px 3px white;
+  color: @cookieLobbyFont;
+  margin:10px;
+  -webkit-text-stroke: 2px rgb(62, 7, 129);
+}
+
+.welcome{
+    font-family: "kidGames";
+    text-shadow: 4px 4px black;
+    font-weight: normal;
+    color: white;
+    margin: 10px;
+}
+.test{
+  margin-left: 10px;
+}
+
 .mainLobby-container {
   display: flex;
   justify-content: center;
@@ -15,6 +35,9 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin-bottom: 50px;
     margin-top: 50px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
   }
 
   h2 {
