--- a/public/style/mainLobby.css
+++ b/public/style/mainLobby.css
@@ -40,7 +40,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 250px;
+  width: 260px;
   margin: 20px;
 }
 .eachGame h4 {
@@ -71,6 +71,26 @@
   font-weight: lighter;
   font-size: 1.5em;
   text-align: center;
+}
+.eachGame .gameTitle .veryHard {
+  color: red;
+  font-size: 20px;
+}
+.eachGame .gameTitle .easy {
+  color: yellow;
+  font-size: 20px;
+}
+.eachGame .gameTitle .medium {
+  color: orange;
+  font-size: 20px;
+}
+.eachGame .gameTitle .hard {
+  color: darkred;
+  font-size: 20px;
+}
+.eachGame .gameTitle .star {
+  color: #574FC2;
+  font-size: 20px;
 }
 .cookieClicker-mainLobby-container {
   width: 150px;
@@ -169,7 +189,7 @@
   background-size: cover;
   border-radius: 20px;
   margin: 20px;
-  background-image: url("../images/10.jpg");
+  background-image: url("../images//slide\ puzzle\ pic.png");
 }
 @media only screen and (max-width: 750px) {
   .mainLobby-container .test {
