--- a/public/style/style.css
+++ b/public/style/style.css
@@ -479,6 +479,24 @@ a:visited {
   font-family: "kidGames";
   font-weight: normal;
 }
+.breaker {
+  font-family: 'kidGames';
+  font-size: 1em;
+  text-shadow: 3px 3px white;
+  color: #574FC2;
+  margin: 10px;
+  -webkit-text-stroke: 2px #3e0781;
+}
+.welcome {
+  font-family: "kidGames";
+  text-shadow: 4px 4px black;
+  font-weight: normal;
+  color: white;
+  margin: 10px;
+}
+.test {
+  margin-left: 10px;
+}
 .mainLobby-container {
   display: flex;
   justify-content: center;
@@ -494,6 +512,9 @@ a:visited {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   margin-bottom: 50px;
   margin-top: 50px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
 }
 .mainLobby-container h2 {
   color: white;
