--- a/public/src/chatRoom.less
+++ b/public/src/chatRoom.less
@@ -30,7 +30,9 @@
     position: relative;
     color: white;
     text-align: center;
-    box-shadow: 0 0 0.7em 0 black;    
+    box-shadow: 0 0 0.7em 0 black; 
+    
+   
 }
 
 .chatRoom::-webkit-scrollbar {
@@ -98,6 +100,10 @@
 
     input {
         max-width: 320px;
+    }
+
+    .chatHeader {
+        font-size: 24px;
     }
  }
 
