switching to main

--- a/public/src/mainLobby.less
+++ b/public/src/mainLobby.less
@@ -8,6 +8,15 @@
   margin:10px;
   -webkit-text-stroke: 2px rgb(62, 7, 129);
 }
+.BREAKER{
+  font-family: 'kidGames';
+  font-size: 8em;
+  text-shadow: 3px 3px white;
+  color: @cookieLobbyFont;
+  margin:10px;
+  -webkit-text-stroke: 2px rgb(62, 7, 129);
+  margin-top: 100px;
+}
 
 .welcome{
     font-family: "kidGames";
