--- a/public/style/mainLobby.css
+++ b/public/style/mainLobby.css
@@ -1,3 +1,21 @@
+.breaker {
+  font-family: 'kidGames';
+  font-size: 1em;
+  text-shadow: 3px 3px white;
+  color: #574FC2;
+  margin: 10px;
+  -webkit-text-stroke: 2px #3e0781;
+}
+.welcome {
+  font-family: "kidGames";
+  text-shadow: 4px 4px black;
+  font-weight: normal;
+  color: white;
+  margin: 10px;
+}
+.test {
+  margin-left: 10px;
+}
 .mainLobby-container {
   display: flex;
   justify-content: center;
@@ -13,6 +31,9 @@
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   margin-bottom: 50px;
   margin-top: 50px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
 }
 .mainLobby-container h2 {
   color: white;
