added CSS to lobbies, cdouble checked rules, added logo nav

--- a/public/src/nav-footer.less
+++ b/public/src/nav-footer.less
@@ -11,6 +11,10 @@
         align-items: center;
         gap: 5px;
         flex-direction: row;
+        
+        a {
+            text-decoration: none;
+        }
 
         span {
             font-family: 'kidGames';
