--- a/public/src/cookieLobby.less
+++ b/public/src/cookieLobby.less
@@ -64,3 +64,20 @@
     font-weight: normal;
 }
 
+@media only screen and (max-width: 750px){
+  .wrapper{
+    .welcome{
+      font-size: 50px;
+    }
+  }
+
+  .lobbyContainer{
+    max-width: 330px;
+  }
+  a{
+    button{
+      max-width: 300px;
+    }
+  }
+}
+
