--- a/public/style/mainLobby.css
+++ b/public/style/mainLobby.css
@@ -6,6 +6,15 @@
   margin: 10px;
   -webkit-text-stroke: 2px #3e0781;
 }
+.BREAKER {
+  font-family: 'kidGames';
+  font-size: 8em;
+  text-shadow: 3px 3px white;
+  color: #574FC2;
+  margin: 10px;
+  -webkit-text-stroke: 2px #3e0781;
+  margin-top: 100px;
+}
 .welcome {
   font-family: "kidGames";
   text-shadow: 4px 4px black;
