--- a/public/style/style.css
+++ b/public/style/style.css
@@ -479,6 +479,17 @@ a:visited {
   font-family: "kidGames";
   font-weight: normal;
 }
+@media only screen and (max-width: 750px) {
+  .wrapper .welcome {
+    font-size: 50px;
+  }
+  .lobbyContainer {
+    max-width: 330px;
+  }
+  a button {
+    max-width: 300px;
+  }
+}
 .breaker {
   font-family: 'kidGames';
   font-size: 1em;
@@ -983,6 +994,9 @@ a:visited {
   gap: 5px;
   flex-direction: row;
 }
+.navBar .logo a {
+  text-decoration: none;
+}
 .navBar .logo span {
   font-family: 'kidGames';
   font-size: 4em;
@@ -1075,12 +1089,18 @@ a:visited {
   text-decoration: none;
 }
 #whack-a-mole {
-  background-color: darkolivegreen;
-  border: solid 20px #000;
+  background-color: #486BBD;
+  border: solid 20px #0A1C44;
   padding: 20px;
   width: 440px;
   display: flex;
   flex-wrap: wrap;
+  cursor: url("../images/whackAMole/hammer.png"), auto;
+  border-radius: 10px;
+  box-shadow: 0 0 0.7em 0 black;
+}
+#whack-a-mole:active {
+  cursor: url("../images/whackAMole/hammer\ slam.png"), auto;
 }
 .hole {
   background-image: url("https://i.ebayimg.com/images/g/UVAAAOSwQLhjTNc~/s-l500.png");
@@ -1090,10 +1110,10 @@ a:visited {
   margin: 5px;
 }
 .mole {
-  background-image: url("https://i.ebayimg.com/images/g/miwAAOSw6GVjTNc~/s-l500.png");
+  background-image: url("../images/whackAMole/mole.jpg");
 }
 .hit {
-  background-image: url("https://studio.code.org/v3/assets/o7BkGtOAPgv4W1PcGfEY_zg3RZBXqekP7ovkgKtrYx0/pic5abfb8c76243f4_512x-_51645367.png");
+  background-image: url("../images/whackAMole/angry\ mole.jpg");
 }
 @media screen and (max-width: 700px) {
   #whack-a-mole {
