changed CSS for forms

--- a/public/src/mainLobby.less
+++ b/public/src/mainLobby.less
@@ -269,4 +269,8 @@
   .gameTwo-mainLobby-container {
     .cookieClicker-mainLobby-container
   }
+
+  .gameFour-mainLobby-container{
+    .cookieClicker-mainLobby-container
+  }
 }
