--- a/public/src/signuplogin.less
+++ b/public/src/signuplogin.less
@@ -212,6 +212,13 @@ form.form {
     align-self: center;
     margin-bottom: 20px;
   }
+
+  input {
+    max-width: 464px;
+  }
+  div.select-edit{
+    width: 350px;
+  }
 }
 
 select {
@@ -281,20 +288,28 @@ a:visited {
     margin:25px;
     .form{
       gap: 5px;
-    }
-    input{
-      height: 40px;
-      margin-bottom: 15px;
-      font-size: 20px;
-    }
-  }
-
-  div.select{
-    max-width: 300px;
-  }
-
-  .avatar-selector{
-    max-width: 300px;
-  }
+      input{
+        max-width: 300px;
+        }
+        .avatar-selector{
+          width: 300px;
+        }
+    
+        div.select{
+          width: 300px;
+        }
+        }
+      }
   
-}
+      input{
+        height: 40px;
+        margin-bottom: 15px;
+        font-size: 20px;
+      }
+      select{
+        width: 300px;
+      }
+    }
+  
+  
+  
