hover over links changed color

--- a/public/src/nav-footer.less
+++ b/public/src/nav-footer.less
@@ -108,7 +108,7 @@
     }
     .links:hover {
         color:#ffffff;
-        background-color: #486BBD;
+        background-color: @mainLobbyBorders;
         cursor:pointer;
     }
     .link:visited {
