--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1107,7 +1107,7 @@ a:visited {
 }
 .dropdown-content .links:hover {
   color: #ffffff;
-  background-color: #486BBD;
+  background-color: #0A1C44;
   cursor: pointer;
 }
 .dropdown-content .link:visited {
