changed CSS minor bugs

--- a/public/src/slideGame.less
+++ b/public/src/slideGame.less
@@ -1,6 +1,18 @@
+.slide-game-container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
 #title {
     height: 150px;
     width: 400px;
+    text-align: center;
+}
+
+#turns{
+    font-family: "kidGames";
 }
 
 #board {
@@ -8,7 +20,6 @@
     height: 360px;
     background-color: lightblue;
     border: 10px solid #0c67ae;
-
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
