--- a/public/src/cookieLobby.less
+++ b/public/src/cookieLobby.less
@@ -5,7 +5,7 @@
     button{
       margin-left: 0;
       position: relative;
-      margin: 40px;
+      margin: 40px
     }
     margin: 40px;
     box-shadow: 0 0 0.7em 0 black;
@@ -27,12 +27,13 @@
 }
 
 .PlayersContainer {
-  height:20vh;
+  height:270px;
     display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 10vh;
+  margin-top: 40px;
   gap: 1em;
+  margin-bottom: 40px;
 }
 
 .players {
